--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -1,5 +1,5 @@
 {
-    "about-title" : "contrast match 2.1",
+    "about-title" : "Color contrast checker & designer 2.1",
     "about-description" : "Kontrasten mellom to farger kan beskrives som en verdi mellom 1 og 21. Bruk WCAGs \"kategorier\" for å designe produkter med gode kontraster!", 
     "about-wcag" : "Fra 1.februar 2023 må alle offentlige nettsider og webapplikasjoner følge WCAG 2.1. ",
     "about-button-linking-to-wcag" : "Les om WCAG 2.1",
