--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -3,6 +3,7 @@
     "about-description" : "Kontrasten mellom to farger kan beskrives som en verdi mellom 1 og 21. Bruk WCAGs retningslinjer for å designe produkter med gode kontraster!", 
     "about-wcag" : "Fra 1.februar 2023 må alle offentlige nettsider og webapplikasjoner følge WCAG 2.1. ",
     "about-button-linking-to-wcag" : "Les om WCAG 2.1",
+    "about-wcag-list-heading" : "Fire kategorier for fargekontraster definert av wcag:",
     "about-wcag-aaa" : "Dette er kontraster med verdi høyere enn 7. Optimale kontraster for tekst og bakgrunnsfarge!",
     "about-wcag-aa" : "Dette er kontraster med verdi mellom 4.5 og 7. Gode kontraster for tekst og bakgrunnsfarge.",
     "about-wcag-nontext-aa" : "Dette er kontraster med verdi mellom 3 og 4.5. Burde ikke brukes som tekst og bakgrunn, men kan brukes i ulike komponenter.",
