--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -11,9 +11,10 @@
     "table-section-title" : "Se kontrastnivå for fargepalettet ditt",
     "mockup-section-title" : "Test fargene i praksis!",
     "contrast-table-title"  : "Visning av valgte fargekombinasjoner med kontrastverdier i en matrise", 
-    "contrast-table-radiobutton-title" :  "Velg visning for tabellen", 
-
-
+    "contrast-table-radiobutton-title" :  "Velg visning for tabellen",
+    "my-colors-heading" : "Mitt fargepalett", 
+    "color-value-by-colorpicker" : "farge i fargevelger",
+    "color-value-by-text" : "farge i tekst",
 
     "footer-text": "kontakt: email@email.no",
     "input-delete" : "fjern farge",
