--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -12,8 +12,10 @@
     "mockup-section-title" : "Test fargene i praksis!",
     "contrast-table-title"  : "Visning av valgte fargekombinasjoner med kontrastverdier i en matrise", 
     "contrast-table-radiobutton-title" :  "Velg visning for tabellen",
+    "recommendation-section-title" : "Oppsummering",
     "my-colors-heading" : "Mitt fargepalett", 
     "change-color" : "Endre farge",
+    
 
 
     "footer-text": "kontakt: email@email.no",
