mockup button displays contrastvalue

--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -15,9 +15,6 @@
     "recommendation-section-title" : "Oppsummering",
     "my-colors-heading" : "Mitt fargepalett", 
     "change-color" : "Endre farge",
-    
-
-
     "footer-text": "kontakt: email@email.no",
     "input-delete" : "fjern farge",
 
@@ -39,6 +36,7 @@
     "mockup-footer-text" : "Jeg er en footer",
     "mockup-textbox-header" : "Test fargene i en tekstboks!",
     "mockup-textbox-maintext" : "Du kan endre farger til venstre for å se andre mulige kombinasjonser fra palettet.",
+    "button-with-contrast" : "Knapp med kontrast",
 
     "add-color" : "legg til fargekode"
 }
