comment out old contrast summary

--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -12,7 +12,7 @@
     "mockup-section-title" : "Test fargene i praksis!",
     "contrast-table-title"  : "Visning av valgte fargekombinasjoner med kontrastverdier i en matrise", 
     "contrast-table-radiobutton-title" :  "Velg visning for tabellen",
-    "recommendation-section-title" : "Oppsummering",
+    "recommendation-section-title" : "Oppsummering av fargekombinasjoner",
     "my-colors-heading" : "Mitt fargepalett", 
     "change-color" : "Endre farge",
     "footer-text": "kontakt: email@email.no",
