--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -34,5 +34,6 @@
     "mockup-footer-text" : "Jeg er en footer",
     "mockup-textbox-header" : "Test fargene i en tekstboks!",
     "mockup-textbox-maintext" : "Du kan endre farger til venstre for å se andre mulige kombinasjonser fra palettet.",
-    "button-with-contrast" : "Knapp med kontrast"
+    "button-with-contrast" : "Knapp med kontrast",
+    "change-color-menu-direction": "Endre plassering av fargemeny"
 }
