--- a/public/locales/nb/translation.json
+++ b/public/locales/nb/translation.json
@@ -36,5 +36,6 @@
     "mockup-textbox-header" : "Test fargene i en tekstboks!",
     "mockup-textbox-maintext" : "Du kan endre farger til venstre for å se andre mulige kombinasjonser fra palettet.",
     "button-with-contrast" : "Knapp med kontrast",
-    "change-color-menu-direction": "Endre plassering av fargemeny"
+    "change-color-menu-direction": "Endre plassering av fargemeny",
+    "try-palette-or-try-yourself" : "...eller legg til fargekoder fra menyen til venstre!"
 }
